# timbre

./: .gitignore  PLAN_NOUVEAU_LOGICIEL.md  README.md  demarrer.bat  pyproject.toml
.github/workflows/: ci.yml
personas/: lea.json  marc.json  timbre.json
schemas/: ws-protocol.schema.json
scripts/: export_schema.py
src/timbre/: __init__.py  __main__.py  config.py  log.py  storage.py
src/timbre/api/: __init__.py  app.py  rest.py  ws.py
src/timbre/core/: __init__.py  conversation.py  gpu.py  orchestrator.py  segmenter.py  session.py  tts_text.py
src/timbre/personas/: __init__.py  models.py  repository.py  store.py
src/timbre/plugins/: __init__.py  base.py
src/timbre/plugins/asr/: __init__.py  cuda.py  whisper.py
src/timbre/plugins/llm/: __init__.py  anthropic.py  lmstudio.py  openai_compat.py  (+2 more)
src/timbre/protocol/: __init__.py  messages.py  states.py
tests/: fakes.py
tests/integration/: test_kokoro.py  test_orpheus.py  test_rest_and_persistence.py  test_rest_providers.py  test_voice_library.py  test_ws_asr.py  test_ws_conversation.py  test_ws_echo.py  test_ws_interrupt.py  test_ws_metrics.py  test_ws_personas.py  test_ws_tts.py  test_ws_vision.py
tests/unit/: test_anthropic.py  test_conversation.py  test_gpu.py  test_lmstudio.py  test_openai_compat.py  test_persona_store.py  test_protocol.py  test_schema_snapshot.py  test_segmenter.py  test_storage.py  test_tts_text.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/scripts/: copy-vad-assets.mjs
ui/src/: App.tsx  api.ts  audio.ts  format.ts  icons.tsx  image.ts  index.css  main.tsx  mic.ts  protocol.ts  providerLogos.tsx  screen.ts  voicePreview.ts  wav.ts  ws.ts
ui/src/components/: ActionBar.tsx  ChatThread.tsx  Composer.tsx  Diagnostic.tsx  FeedbackSection.tsx  KokoroTab.tsx  OrpheusPanel.tsx  PersonaSelect.tsx  PersonasSection.tsx  PiperTab.tsx  PreviewButton.tsx  ProvidersSection.tsx  SettingsView.tsx  Sidebar.tsx  StateIndicator.tsx  VoiceAgentBar.tsx  VoiceLibraryModal.tsx  VoiceSection.tsx
(+6 files in other folders)
