[project]
name = "timbre"
version = "0.1.0"
description = "Assistant vocal IA 100 % local — personas et voix françaises expressives"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Sacha Dubernet" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx2>=2.5.0",
    "edge-tts>=7.2.8",
]

[project.optional-dependencies]
# ASR GPU : `uv sync --extra asr`. Les wheels nvidia fournissent les DLL
# cublas/cudnn requises par faster-whisper sous Windows (voir plugins/asr/cuda.py).
asr = [
    "faster-whisper>=1.1",
    "nvidia-cublas-cu12>=12.4; platform_system == 'Windows'",
    "nvidia-cudnn-cu12>=9.1; platform_system == 'Windows'",
]

[project.scripts]
timbre = "timbre.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timbre"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                 # isort
    "N",                 # pep8-naming
    "UP",                # pyupgrade
    "B",                 # bugbear
    "A",                 # builtins shadowing
    "C4",                # comprehensions
    "SIM",               # simplify
    "RUF",
    "ANN",               # annotations obligatoires (backend 100 % typé)
    "ASYNC",
    "LOG", "G",          # bonnes pratiques logging
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["timbre"]

[[tool.mypy.overrides]]
module = ["faster_whisper.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
